Fixed recieving bubble spacing

--- a/web/src/app/page/chat-page/chat-page.component.scss
+++ b/web/src/app/page/chat-page/chat-page.component.scss
@@ -68,9 +68,10 @@ $break-large: 64em;
     background: #f5f5f5;
     border-radius: 4px;
     position: relative;
-    margin: 0 0 25px;
+    margin: 0 0 0 25px;
+    float: left;
     &.alt {
-      margin: 0 0 0 60px;
+      margin: 0 0 0 25px;
       float: right;
       background: #88BDBC;
     }
